# usb-lib

./: CMakeLists.txt  NETWORK_SETUP.md  README.md  USAGE.md  build.sh  build_linux_receiver.sh  install_deps_linux.sh  linux_build_instructions.md  start_sender.sh
common/: CMakeLists.txt
common/network/: message_handler.cpp  message_handler.h  tcp_socket.cpp  tcp_socket.h
common/protocol/: usb_types.cpp  usb_types.h  usbip_protocol.cpp  usbip_protocol.h
common/utils/: buffer.cpp  buffer.h  logger.cpp  logger.h
config/: receiver.conf  sender.conf
receiver/: CMakeLists.txt  main.cpp
receiver/usbip/: usbip_client.cpp  usbip_client.h
receiver/virtual_device/: virtual_usb_device.cpp  virtual_usb_device.h
sender/: CMakeLists.txt  main.cpp  reverse_client.cpp  reverse_client.h
sender/capture/: urb_capture.cpp  urb_capture.h
sender/usb/: mass_storage_device.cpp  mass_storage_device.h  usb_device_manager.cpp  usb_device_manager.h
tests/: CMakeLists.txt  test_network.cpp  test_protocol.cpp
